--- a/Website files/styles/style.css
+++ b/Website files/styles/style.css
@@ -1,3 +1,56 @@
-.carousel-container img {
-    width: 200px;
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.carousel {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    background-color: gray;
+}
+
+#carousel-container {
+    grid-column: 2/3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 30em;
+    background-color: gray;
+}
+
+.posts {
+    width: 250px;
+    height: 250px;
+    background-color: lightgray;
+    justify-items: center;
+}
+
+#post-1, #post-3 {
+    width: 175px;
+    height: 175px;
+}
+
+#back-container {
+    grid-column: 1/2;
+}
+
+#next-container {
+    grid-column: 3/4;
+}
+
+#back-container, #next-container {
+    justify-self: center;
+    align-self: center;
+}
+
+#back-btn, #next-btn {
+    background: none;
+    border: none;
+    font-size: 3em;
+}
+
+#back-btn:hover, #next-btn:hover {
+    cursor: pointer;
+    font: bold;
 }
