--- a/Website files/styles/style.css
+++ b/Website files/styles/style.css
@@ -10,26 +10,45 @@ body {
 }
 
 #carousel-container {
+    position: relative;
     grid-column: 2/3;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     width: 100%;
     height: 30em;
     background-color: gray;
 }
 
 .posts {
-    width: 250px;
-    height: 250px;
-    background-color: lightgray;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     justify-items: center;
+    transform: translate(-50%, -50%);
+    background-color: lightgray;
+    transition: all 0.4s ease-in-out;
 }
 
-#post-1, #post-3 {
+.post-1 {
     width: 175px;
     height: 175px;
+    left: 20%;
+    transform: translate(-50%, -50%) scale(1);
 }
+
+.post-2 {
+    width: 250px;
+    height: 250px;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.1);
+    z-index: 1;
+} 
+
+.post-3 {
+    width: 175px;
+    height: 175px;
+    left: 80%;
+    transform: translate(-50%, -50%) scale(1);
+}
+
 
 #back-container {
     grid-column: 1/2;
