--- a/Website files/styles/style.css
+++ b/Website files/styles/style.css
@@ -16,7 +16,7 @@ body {
     position: relative;
     grid-column: 2/3;
     width: 100%;
-    height: 30em;
+    height: 29.5em;
     background-color: gray;
 }
 
@@ -72,35 +72,90 @@ body {
     font-size: 3em;
 }
 
-#back-btn:hover, #next-btn:hover {
+#back-btn:hover, #next-btn:hover, #create-post-btn button:hover, #search-post-input button:hover {
     cursor: pointer;
-    font: bold;
 }
 
 #search-post-input {
     display: flex;
     justify-self: center;
     align-self: center;
-    background-color: white;
 }
 
 #search-post-input input {
-    height: 30px;
+    height: 48px;
+    padding-right: 75px;
+    padding-left: 100px;
     border: none;
+    font-size: 17px;
+    text-align: right;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+#search-post-input button {
+    height: 50px;
+    padding-right: 25px;
+    border: none;
+    color: gray;
+    background-color: white;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 #search-icon {
-    margin: 0;
-    justify-self: center;
+    font-size: 45px;
 }
 
 #create-post-btn {
     justify-self: center;
-    margin: 30px;
 }
 
 #create-post-btn button {
-    font-size: 25px;
+    font-size: 22px;
     border-radius: 25px;
+    padding: 15px 30px 15px 30px;
+    margin: 30px;
+    color: white;
+    background-color: blue;
+}
+
+.recent-questions {
+    margin-top: 25px;
+    margin-left: 70px;
+}
+
+.recent-questions h2 {
+    font-size: 35px;
+    margin-bottom: 0px;
+}
+
+#subpost-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.subpost {
+    display: flex;
+    margin: 10px;
+    width: 25em;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.subpost-content {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
+}
+
+.subpost-content h3 {
+    margin: 0;
+}
+
+.help-icon {
+    align-content: center;
+    padding-left: 15px;
+    color: gray;
 }
