Made sepereate css files for the pages and made the nav bar the same in both index.html and results.html

--- a/Website files/styles/index-style.css
+++ b/Website files/styles/index-style.css
@@ -218,3 +218,15 @@ ul li:last-child {
   padding-left: 15px;
   color: gray;
 }
+
+footer{
+  top:100px;
+  background-color: #ffffff;
+  position:relative;
+  text-align: center;
+  height: 50px;
+}
+
+footer p{
+  padding-top:15px;
+}
