--- a/Website files/styles/index-style.css
+++ b/Website files/styles/index-style.css
@@ -131,7 +131,6 @@ ul li:last-child {
 
 #back-btn:hover,
 #next-btn:hover,
-#create-post-btn button:hover,
 #search-post-input button:hover {
   cursor: pointer;
 }
@@ -187,8 +186,10 @@ ul li:last-child {
   background-color: blue;
 }
 
-#create-post-btn :hover{
-  background-color: rgb(0, 0, 193);
+
+#create-post-btn button:hover{
+  background-color: rgb(0, 0, 179);
+  cursor: pointer;
   transition: 0.3s;
 }
 
