--- a/Website files/styles/post-style.css
+++ b/Website files/styles/post-style.css
@@ -6,6 +6,8 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+/* Header css */
+
 nav {
   background-color: white;
   width: 100%;
@@ -50,4 +52,54 @@ ul li:first-child {
 ul li:last-child {
   border-right: none;
   padding-right: 0;
+}
+
+/*main body css */
+
+.user-bar img, .post-content img, .comment img {
+  width: 4em;
+}
+
+.user-bar {
+  margin: 2em 5em 0 5em;
+  display: flex;
+}
+
+.user-bar img {
+  margin-right: 2em;
+}
+
+.post-content {
+  margin: 2em 5em 0 5em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+}
+
+#post-title {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.post-content img {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.post-content p {
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+/* Footer css */
+
+footer{
+  top:100px;
+  background-color: #ffffff;
+  position:relative;
+  text-align: center;
+  height: 50px;
+}
+
+footer p{
+  padding-top:15px;
 }
