--- a/Website files/styles/post-style.css
+++ b/Website files/styles/post-style.css
@@ -49,9 +49,29 @@ ul li:first-child {
   padding-left: 0;
 }
 
-ul li:last-child {
+ul li:nth-child(3){
   border-right: none;
   padding-right: 0;
+}
+
+ul li:last-child{
+  border-right: none;
+  position: absolute;
+  right: 0;
+  margin-right: 100px;
+}
+
+input[name="search"]{
+  width: 75px;
+  height: 40px;
+  border-radius: 15px;
+  border: 1px solid rgb(65, 65, 65);
+  -webkit-transition: width 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out;
+}
+
+input[name="search"]:focus{
+  width: 600px;
 }
 
 /*main body css */
