--- a/Website files/styles/index-style.css
+++ b/Website files/styles/index-style.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #d6d6d6;
+  background-color: #e2f3fd;
   margin: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 nav {
-  background-color: white;
+  background-color: #3464c2;
   width: 100%;
   height: 100px;
   display: flex;
@@ -53,7 +53,7 @@ ul li:last-child {
 }
 
 .hero {
-  background-color: gray;
+  background-color: #f7f6f6;
 }
 
 .hero h1 {
@@ -72,7 +72,7 @@ ul li:last-child {
   grid-column: 2/3;
   width: 100%;
   height: 20em;
-  background-color: gray;
+  background-color: #f7f6f6;
 }
 
 .posts {
@@ -179,12 +179,12 @@ ul li:last-child {
   padding: 15px 30px 15px 30px;
   margin: 30px;
   color: white;
-  background-color: blue;
+  background-color: #ff934e;
 }
 
 
 #create-post-btn button:hover{
-  background-color: rgb(0, 0, 179);
+  background-color: #c26f3c;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -230,7 +230,7 @@ ul li:last-child {
 
 footer{
   top:100px;
-  background-color: #ffffff;
+  background-color: #3464c2;
   position:relative;
   text-align: center;
   height: 50px;
