--- a/Website files/styles/index-style.css
+++ b/Website files/styles/index-style.css
@@ -55,13 +55,18 @@ ul li:last-child {
 }
 
 .hero {
-  background-color: #f7f6f6;
+  background-image: url(/Website\ files/images/taylor.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: -2;
 }
 
 .hero h1 {
     text-align: center;
     margin: 0;
     padding-top: 2em;
+    color: #d3d3d3;
 }
 
 .carousel {
@@ -74,7 +79,6 @@ ul li:last-child {
   grid-column: 2/3;
   width: 100%;
   height: 20em;
-  background-color: #f7f6f6;
 }
 
 .posts {
@@ -111,11 +115,28 @@ ul li:last-child {
 }
 
 #back-container {
+  transition: 0.3s;
   grid-column: 1/2;
+  width: 50px;
+  height: auto;
+  background-color: white;
+  border-radius: 35px;
+  text-align: center;
 }
 
 #next-container {
+  transition: 0.3s;
   grid-column: 3/4;
+  width: 50px;
+  height: auto;
+  background-color: white;
+  border-radius: 35px;
+  text-align: center;
+}
+
+#back-container:hover, #next-container:hover{
+  background-color: rgba(255, 255, 255, 0.793);
+  transition: 0.3s;
 }
 
 #back-container,
