--- a/Website files/styles/login-style.css
+++ b/Website files/styles/login-style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: #fff6c5;
   margin: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
@@ -9,7 +9,7 @@ body {
 /* Nav bar style */
 
 nav {
-  background-color: #3464c2;
+  background-color: #5cbde5;
   width: 100%;
   height: 100px;
   display: flex;
@@ -82,7 +82,7 @@ input[name="search"]:focus{
 .login-panel {
     width: 25em;
     height: 25em;
-    background-color: #eaeaea;
+    background-color: #3464c2;
     justify-self: center;
     text-align: center;
     border-radius: 5em;
@@ -100,7 +100,7 @@ input[name="search"]:focus{
 #login-btn {
     width: 7em;
     height: 3em;
-    background-color: #d6d6d6;
+    background-color: #ff924d;
     border: none;
     border-radius: 1em;
     font-size: 1em;
@@ -116,7 +116,7 @@ input[name="search"]:focus{
 
 footer{
   top:100px;
-  background-color: #3464c2;
+  background-color: #5cbde5;
   position:relative;
   text-align: center;
   height: 50px;
