--- a/Website files/styles/index-style.css
+++ b/Website files/styles/index-style.css
@@ -55,7 +55,7 @@ ul li:last-child {
 }
 
 .hero {
-  background-image: url(/Website\ files/images/taylor.jpg);
+  background-image: url(../images/taylor.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -66,7 +66,7 @@ ul li:last-child {
     text-align: center;
     margin: 0;
     padding-top: 2em;
-    color: #d3d3d3;
+    color: black;
 }
 
 .carousel {
