--- a/Website files/styles/create-post-style.css
+++ b/Website files/styles/create-post-style.css
@@ -1,12 +1,20 @@
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #d6d6d6;
+  background-color: #fff6c5;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main{
+  flex: 1;
 }
 
 nav {
-  background-color: white;
+  background-color: #5cbde5;
   width: 100%;
   height: 100px;
   display: flex;
@@ -80,14 +88,11 @@ input[name="search"]:focus{
 
 /* Footer */
 
-footer {
-  top: 100px;
-  background-color: #ffffff;
-  position: relative;
-  text-align: center;
+footer{
   height: 50px;
-}
-
-footer p {
-  padding-top: 15px;
+  background-color: #5cbde5;
+  position:relative;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
