--- a/Website files/styles/login-style.css
+++ b/Website files/styles/login-style.css
@@ -2,8 +2,14 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff6c5;
-  margin: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main{
+  flex: 1;
 }
 
 /* Nav bar style */
@@ -14,7 +20,6 @@ nav {
   height: 100px;
   display: flex;
   align-items: center;
-  border-bottom: 3px solid #ff924d;
 }
 
 img[id="navlogo"] {
@@ -115,13 +120,10 @@ input[name="search"]:focus{
 /* Footer Style */
 
 footer{
-  top:100px;
+  height: 50px;
   background-color: #5cbde5;
   position:relative;
   text-align: center;
-  height: 50px;
-}
-
-footer p{
-  padding-top:15px;
+  margin: 0;
+  padding: 0;
 }
